# g1_decoder

./: .gitignore  Makefile.am  configure.ac  libdecx170h.pc.in  libdecx170m.pc.in  libdecx170p.pc.in  libdecx170vp8.pc.in  libdwlx170.pc.in  libx170j.pc.in  release_note_Verisilicon-Atmel.txt
software/: Makefile.am
software/linux/: Makefile.am
software/linux/dwl/: Makefile  Makefile.am  dwl_defs.h  dwl_hw_core.c  dwl_hw_core.h  dwl_hw_core_array.c  dwl_hw_core_array.h  dwl_linux.c  dwl_linux.h  dwl_linux_mc.c  dwl_linux_sc.c
software/linux/h264high/: Makefile  Makefile.am  h264hwd_debug.h
software/linux/jpeg/: Makefile  Makefile.am  jpegasicdbgtrace.c  jpegasicdbgtrace.h  jpegdebug.h
software/linux/ldriver/: Makefile  build_for_mpcore.sh  build_for_socle.sh  build_for_vexpress.sh  driver_load.sh  hx170dec.c  hx170dec.h
software/linux/ldriver/gpl/: Makefile  hx170dec.c  hx170dec.h
software/linux/memalloc/: Makefile  README  memalloc.c  memalloc.h  memalloc_load.sh
software/linux/memalloc/gpl/: Makefile  memalloc.c  memalloc.h
software/linux/mpeg4/: Makefile  Makefile.am  mp4debug.h  mpeg4asicdbgtrace.c  mpeg4asicdbgtrace.h
software/linux/pp/: Makefile  Makefile.am
software/linux/vp8/: Makefile  Makefile.am
software/source/: Makefile.am
software/source/common/: 8170enum.h  8170table.h  Makefile.am  bqueue.c  bqueue.h  commonconfig.c  commonconfig.h  decppif.h  errorhandling.c  errorhandling.h  refbuffer.c  refbuffer.h  regdrv.c  regdrv.h  tiledref.c  tiledref.h  version.h  workaround.c  workaround.h
software/source/config/: deccfg.h  ppcfg.h
software/source/h264high/: h264_pp_multibuffer.h  h264_pp_pipeline.c  h264_pp_pipeline.h  h264decapi.c  h264decapi_e.c  h264decapi_e.h  h264decmc_internals.h  h264decmcapi.c  h264hwd_asic.c  h264hwd_asic.h  h264hwd_cabac.c  h264hwd_cabac.h  h264hwd_cavlc.c  h264hwd_cavlc.h  h264hwd_conceal.c  h264hwd_conceal.h  h264hwd_container.h  h264hwd_decoder.c  h264hwd_decoder.h  h264hwd_dpb.c  h264hwd_dpb.h  h264hwd_dpb_lock.c  h264hwd_dpb_lock.h  h264hwd_exports.h  h264hwd_image.h  h264hwd_inter_prediction.c  h264hwd_intra_prediction.c  h264hwd_macroblock_layer.c  h264hwd_macroblock_layer.h  h264hwd_regdrv.h  h264hwd_slice_data.c  h264hwd_slice_data.h  h264hwd_storage.c  h264hwd_storage.h  h264hwd_util.h
software/source/h264high/legacy/: h264hwd_byte_stream.c  h264hwd_byte_stream.h  h264hwd_nal_unit.c  h264hwd_nal_unit.h  h264hwd_neighbour.c  h264hwd_neighbour.h  h264hwd_pic_order_cnt.c  h264hwd_pic_order_cnt.h  h264hwd_pic_param_set.c  h264hwd_pic_param_set.h  h264hwd_seq_param_set.c  h264hwd_seq_param_set.h  h264hwd_slice_group_map.c  h264hwd_slice_group_map.h  h264hwd_slice_header.c  h264hwd_slice_header.h  h264hwd_stream.c  h264hwd_stream.h  h264hwd_util.c  h264hwd_vlc.c  h264hwd_vlc.h  h264hwd_vui.c  h264hwd_vui.h
software/source/inc/: basetype.h  decapicommon.h  dwl.h  h264decapi.h  jpegdecapi.h  mp4decapi.h  ppapi.h  vp6decapi.h  vp8decapi.h
software/source/jpeg/: jpeg_pp_pipeline.h  jpegdecapi.c  jpegdeccontainer.h  jpegdechdrs.c  jpegdechdrs.h  jpegdecinternal.c  jpegdecinternal.h  jpegdecmarkers.h  jpegdecscan.c  jpegdecscan.h  jpegdecutils.c  jpegdecutils.h
software/source/mpeg4/: mp4decapi.c  mp4decapi_internal.c  mp4decapi_internal.h  mp4decapihwd_storage.h  mp4deccfg.h  mp4dechwd_container.h  mp4dechwd_custom.c  mp4dechwd_error_conceal.c  mp4dechwd_error_conceal.h  mp4dechwd_generic.c  mp4dechwd_generic.h  mp4dechwd_hdrs.h  mp4dechwd_headers.c  mp4dechwd_headers.h  mp4dechwd_mbdesc.h  mp4dechwd_mbsetdesc.h  mp4dechwd_motiontexture.c  mp4dechwd_motiontexture.h  mp4dechwd_mvstorage.h  mp4dechwd_rvlc.c  mp4dechwd_rvlc.h  mp4dechwd_shortvideo.c  mp4dechwd_shortvideo.h  mp4dechwd_storage.h  mp4dechwd_strmdec.c  mp4dechwd_strmdec.h  mp4dechwd_strmdesc.h  mp4dechwd_svdesc.h  mp4dechwd_utils.c  mp4dechwd_utils.h  mp4dechwd_videopacket.c  mp4dechwd_videopacket.h  mp4dechwd_vlc.c  mp4dechwd_vlc.h  mp4dechwd_vop.c  mp4dechwd_vop.h  mp4dechwd_vopdesc.h  mpeg4_pp_pipeline.h
software/source/pp/: ppapi.c  ppinternal.c  ppinternal.h
software/source/vp8/: vp8decapi.c  vp8decmc_internals.h  vp8decmcapi.c  vp8hwd_asic.c  vp8hwd_asic.h  vp8hwd_bool.c  vp8hwd_bool.h  vp8hwd_buffer_queue.c  vp8hwd_buffer_queue.h  vp8hwd_container.h  vp8hwd_debug.h  vp8hwd_decoder.c  vp8hwd_decoder.h  vp8hwd_error.c  vp8hwd_error.h  vp8hwd_headers.c  vp8hwd_headers.h  vp8hwd_pp_pipeline.c  vp8hwd_pp_pipeline.h  vp8hwd_probs.c  vp8hwd_probs.h
software/test/common/swhw/: Makefile  md5.c  md5.h  tb_cfg.c  tb_cfg.h  tb_defs.h  tb_md5.c  tb_md5.h  tb_params.c  tb_stream_corrupt.c  tb_stream_corrupt.h  tb_sw_performance.h  tb_tiled.c  tb_tiled.h  trace.c  trace.h
software/test/common/utils/: Makefile  async_task.c  fifo.c  fifo.h
software/test/h264high/: Makefile  bytestream_parser.c  dectestbench.c  libav-wrapper.c  mcdectestbench.c
software/test/jpeg/: Makefile  dectestbench.c
software/test/mpeg4/: Makefile  mpeg4dectest.c  rm_length.c
software/test/pp/avs_pipeline_mode/: Makefile
software/test/pp/external_mode/: Makefile  cfg.c  cfg.h  defs.h  frame.c  frame.h  main.c  params.c  pp.h  pptestbench.c  pptestbench.h
software/test/pp/h264high_pipeline_mode/: Makefile
software/test/pp/jpeg_pipeline_mode/: Makefile
software/test/pp/mpeg2_pipeline_mode/: Makefile
software/test/pp/mpeg4_pipeline_mode/: Makefile
software/test/pp/rv_pipeline_mode/: Makefile
software/test/pp/vc1_pipeline_mode/: Makefile
software/test/pp/vp6_pipeline_mode/: Makefile
software/test/pp/vp8_pipeline_mode/: Makefile
software/test/vp8/: Makefile  dectestbench.c  ivf.c  ivf.h  mcdectestbench.c  testparams.h  vp8bufferalloc.c  vp8bufferalloc.h  vp8filereader.c  vp8filereader.h  vp8writeoutput.c  vp8writeoutput.h
